--- a/frontEndCaptini/package.json
+++ b/frontEndCaptini/package.json
@@ -22,6 +22,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@sweetalert2/ngx-sweetalert2": "^11.0.0",
     "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.1.1",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^9.0.0",
     "mdb-angular-ui-kit": "^2.0.0",
@@ -37,6 +38,7 @@
     "@angular-devkit/build-angular": "^13.2.2",
     "@angular/cli": "~13.1.3",
     "@angular/compiler-cli": "~13.1.0",
+    "@types/crypto-js": "^4.1.1",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
     "@types/recordrtc": "^5.6.9",
