--- a/frontEndCaptini/package.json
+++ b/frontEndCaptini/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "front-end-captini",
-  "version": "0.0.0",
-  "scripts": {
+    "name": "front-end-captini",
+    "version": "0.0.0",
+    "scripts": {
       "ng": "ng",
       "start": "ng serve ",
       "build": "ng build",
       "watch": "ng build --watch --configuration development",
       "test": "ng test"
-  },
-  "private": true,
-  "dependencies": {
+    },
+    "private": true,
+    "dependencies": {
       "@angular/animations": "~13.1.0",
       "@angular/common": "~13.1.0",
       "@angular/compiler": "~13.1.0",
@@ -21,6 +21,8 @@
       "@ngx-translate/core": "^14.0.0",
       "@ngx-translate/http-loader": "^7.0.0",
       "@sweetalert2/ngx-sweetalert2": "^11.0.0",
+      "bcryptjs": "^2.4.3",
+      "crypto-js": "^4.1.1",
       "jquery": "^3.6.0",
       "jsonwebtoken": "^9.0.0",
       "mdb-angular-ui-kit": "^2.0.0",
@@ -31,11 +33,12 @@
       "sweetalert2": "^11.4.4",
       "tslib": "^2.3.0",
       "zone.js": "~0.11.4"
-  },
-  "devDependencies": {
+    },
+    "devDependencies": {
       "@angular-devkit/build-angular": "^13.2.2",
       "@angular/cli": "~13.1.3",
       "@angular/compiler-cli": "~13.1.0",
+      "@types/crypto-js": "^4.1.1",
       "@types/jasmine": "~3.10.0",
       "@types/node": "^12.11.1",
       "@types/recordrtc": "^5.6.9",
@@ -46,5 +49,5 @@
       "karma-jasmine": "~4.0.0",
       "karma-jasmine-html-reporter": "~1.7.0",
       "typescript": "~4.5.2"
+    }
   }
-}
